--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/passport": "^11.10.6",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.4",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
