--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.10.6",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^6.4",
+        "tightenco/ziggy": "^2.0",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
