--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/passport": "^11.10.6",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "ramsey/uuid": "^4.7",
         "spatie/laravel-permission": "^6.4",
         "tymon/jwt-auth": "^2.0"
     },
