--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 API_KEY=
 JWT_SECRET=
+
+# Be sure to lower this value in production otherwise you could burn through your quota quickly.
+SENTRY_TRACES_SAMPLE_RATE=1.0
