--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "ramsey/uuid": "^4.7",
+        "sentry/sentry-laravel": "^4.3",
         "spatie/laravel-permission": "^6.4",
         "tymon/jwt-auth": "^2.0"
     },
